--- a/notebooks/web_scrapping_tests.ipynb
+++ b/notebooks/web_scrapping_tests.ipynb
@@ -175,27 +175,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "PermissionError",
-     "evalue": "[Errno 13] Permission denied: '../data/hello.pdf'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-13-b1a934f2302d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0murl\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpdfs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'link'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mfile\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0murl\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mallow_redirects\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'../data/hello.pdf'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'wb'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontent\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mPermissionError\u001b[0m: [Errno 13] Permission denied: '../data/hello.pdf'"
-     ]
+     "data": {
+      "text/plain": [
+       "1845825"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import requests\n",
+    "name = pdfs[0]['info']\n",
     "url = pdfs[0]['link']\n",
     "file = requests.get(url, allow_redirects=True)\n",
-    "open('../data/' + , 'wb').write(file.content)"
+    "open('../data/' + name + '.pdf', 'wb').write(file.content)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora que ya hemos descargado un pdf vamos a hacer pdf scrapping para extraer los datos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Got stderr: mar. 28, 2020 12:09:33 P. M. org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\r\n",
+      "INFORMACIÓN: OpenType Layout tables used in font ABCDEE+Calibri are not implemented in PDFBox and will be ignored\r\n",
+      "mar. 28, 2020 12:09:33 P. M. org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\r\n",
+      "INFORMACIÓN: OpenType Layout tables used in font ABCDEE+Calibri are not implemented in PDFBox and will be ignored\r\n",
+      "mar. 28, 2020 12:09:33 P. M. org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\r\n",
+      "INFORMACIÓN: OpenType Layout tables used in font ABCDEE+Calibri are not implemented in PDFBox and will be ignored\r\n",
+      "mar. 28, 2020 12:09:34 P. M. org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\r\n",
+      "INFORMACIÓN: OpenType Layout tables used in font ABCDEE+Calibri are not implemented in PDFBox and will be ignored\r\n",
+      "mar. 28, 2020 12:09:34 P. M. org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\r\n",
+      "INFORMACIÓN: OpenType Layout tables used in font ABCDEE+Calibri are not implemented in PDFBox and will be ignored\r\n",
+      "mar. 28, 2020 12:09:34 P. M. org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\r\n",
+      "INFORMACIÓN: OpenType Layout tables used in font ABCDEE+Calibri are not implemented in PDFBox and will be ignored\r\n",
+      "mar. 28, 2020 12:09:34 P. M. org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\r\n",
+      "INFORMACIÓN: OpenType Layout tables used in font ABCDEE+Calibri are not implemented in PDFBox and will be ignored\r\n",
+      "mar. 28, 2020 12:09:34 P. M. org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\r\n",
+      "INFORMACIÓN: OpenType Layout tables used in font ABCDEE+Calibri are not implemented in PDFBox and will be ignored\r\n",
+      "mar. 28, 2020 12:09:34 P. M. org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\r\n",
+      "INFORMACIÓN: OpenType Layout tables used in font ABCDEE+Calibri are not implemented in PDFBox and will be ignored\r\n",
+      "mar. 28, 2020 12:09:36 P. M. org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\r\n",
+      "INFORMACIÓN: OpenType Layout tables used in font ABCDEE+Calibri are not implemented in PDFBox and will be ignored\r\n",
+      "mar. 28, 2020 12:09:36 P. M. org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\r\n",
+      "INFORMACIÓN: OpenType Layout tables used in font ABCDEE+Calibri are not implemented in PDFBox and will be ignored\r\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tabula\n",
+    "contenido_pdf = tabula.read_pdf('../data/' + name + '.pdf', pages='all', output_format='json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'comunidad': 'Andalucía', 'casos': '3793', 'casos_notificados': '3145'},\n",
+       " {'comunidad': 'Aragón', 'casos': '1338', 'casos_notificados': '482'},\n",
+       " {'comunidad': 'Asturias', 'casos': '900', 'casos_notificados': '841'},\n",
+       " {'comunidad': 'Baleares', 'casos': '755', 'casos_notificados': '325'},\n",
+       " {'comunidad': 'Canarias', 'casos': '878', 'casos_notificados': '278'},\n",
+       " {'comunidad': 'Cantabria', 'casos': '810', 'casos_notificados': '737'},\n",
+       " {'comunidad': 'Castilla La Mancha',\n",
+       "  'casos': '3934',\n",
+       "  'casos_notificados': '0'},\n",
+       " {'comunidad': 'Castilla y León',\n",
+       "  'casos': '4132',\n",
+       "  'casos_notificados': '3266'},\n",
+       " {'comunidad': 'Cataluña', 'casos': '12940', 'casos_notificados': '1928'},\n",
+       " {'comunidad': 'Comunitat Valenciana',\n",
+       "  'casos': '3532',\n",
+       "  'casos_notificados': '2453'},\n",
+       " {'comunidad': 'Extremadura', 'casos': '1231', 'casos_notificados': '1199'},\n",
+       " {'comunidad': 'Galicia', 'casos': '2322', 'casos_notificados': '132'},\n",
+       " {'comunidad': 'Madrid', 'casos': '19243', 'casos_notificados': '8926'},\n",
+       " {'comunidad': 'Murcia', 'casos': '714', 'casos_notificados': '575'},\n",
+       " {'comunidad': 'Navarra', 'casos': '1641', 'casos_notificados': '1058'},\n",
+       " {'comunidad': 'País Vasco', 'casos': '4601', 'casos_notificados': '2203'},\n",
+       " {'comunidad': 'La Rioja', 'casos': '1236', 'casos_notificados': '875'},\n",
+       " {'comunidad': 'Ceuta', 'casos': '17', 'casos_notificados': '17'},\n",
+       " {'comunidad': 'Melilla', 'casos': '42', 'casos_notificados': '28'}]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# let's look for the interesting table\n",
+    "comunidades = [\n",
+    "    'Andalucía',\n",
+    "    'Aragón',\n",
+    "    'Asturias',\n",
+    "    'Baleares',\n",
+    "    'Canarias',\n",
+    "    'Cantabria',\n",
+    "    'Castilla La Mancha',\n",
+    "    'Castilla y León',\n",
+    "    'Cataluña',\n",
+    "    'Comunitat Valenciana',\n",
+    "    'Extremadura',\n",
+    "    'Galicia',\n",
+    "    'Madrid',\n",
+    "    'Murcia',\n",
+    "    'Navarra',\n",
+    "    'País Vasco',\n",
+    "    'La Rioja',\n",
+    "    'Ceuta',\n",
+    "    'Melilla'\n",
+    "]\n",
+    "datos_interes = []\n",
+    "for top_level_element in contenido_pdf:\n",
+    "    for level_1_element in top_level_element['data']:\n",
+    "        comunidad = {}\n",
+    "        for i in range(0, len(level_1_element)):\n",
+    "            if level_1_element[i]['text'] in comunidades:\n",
+    "                comunidad['comunidad'] = level_1_element[i]['text']\n",
+    "                comunidad['casos'] = level_1_element[i + 1]['text']\n",
+    "                comunidad['casos_notificados'] = level_1_element[i + 2]['text']\n",
+    "                datos_interes.append(comunidad)\n",
+    "                \n",
+    "datos_interes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
